--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713651301000-->
-[内塔尼亚胡:美国对以色列的援助“捍卫了西方文明”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9-%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E)
+<!--1713651303000-->
+[中国海军成立75周年之际，美菲将举行迄今规模最大的「肩并肩」军演 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240420-%E4%B8%AD%E5%9B%BD%E6%B5%B7%E5%86%9B%E6%88%90%E7%AB%8B75%E5%91%A8%E5%B9%B4%E4%B9%8B%E9%99%85%EF%BC%8C%E7%BE%8E%E8%8F%B2%E5%B0%86%E4%B8%BE%E8%A1%8C%E8%BF%84%E4%BB%8A%E8%A7%84%E6%A8%A1%E6%9C%80%E5%A4%A7%E7%9A%84-%E8%82%A9%E5%B9%B6%E8%82%A9-%E5%86%9B%E6%BC%94)
 ------
 
-<div>20/04/2024 - 23:23</div><img src="https://s.rfi.fr/media/display/c626eb40-f024-11ee-b825-005056bf30b7/w:1280/p:16x9/2024-03-31T135038Z_1609163870_RC2WC5A0S4MC_RTRMADP_3_ISRAEL-POLITICS-NETANYAHU.JPG"><p><strong>在以色列与巴勒斯坦哈马斯战争持续并与伊朗紧张加剧的背景下，美国众议院周六(4月20日）通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，其中包括向以色列提供264亿美元新的军事援助。以色列总理内塔尼亚胡称，新军事援助是“捍卫了西方文明”。        </strong></p><div><p>法新社报道，美国国会众院周六以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>以色列总理内塔尼亚胡立即对此表示欢迎。内塔尼亚胡在X上写道：“美国国会刚刚以压倒性多数通过了一项广受欢迎的援助法案，该法案表明了两党对以色列的强有力支持并捍卫了西方文明。”</p><p>以色列外长卡茨也对美国众议院的投票表示欢迎，卡茨在他的X账户上表示，这次投票“证明了以色列和美国之间的密切关系和战略伙伴关系，并向我们的敌人发出了强烈的信息”。</p><p>法新社称，在以色列周五向伊朗发起报复性袭击后，伊朗和以色列似乎正在摆脱可能的紧张升级，德黑兰则是淡化了以色列袭击的程度范围。伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸，美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列此前誓言要让伊朗为袭击以色列付出代价。</p><p>与此同时，以色列军队对被围困的加沙地带发动了数十次袭击，据民防部门称，其中一次袭击导致该地区南部拉法同一家庭的九名成员死亡，其中包括儿童。</p><p>另据巴勒斯坦卫生部门周六表示，以色列军队自进入约旦河西岸城市图勒凯尔姆开展军事行动以来，已造成至少13名巴勒斯坦人死亡。</p><p>巴勒斯坦表示，以军部分撤离图勒凯尔姆后，救援人员进入冲突现场，发现死者遗体。</p><p>巴勒斯坦传媒报道，以巴在图勒凯尔姆冲突期间，以军阻止救援人员进入现场救治。以色列传媒表示，行动期间，以军多次遭到巴人武装伏击，至少有9名以军士兵受伤。</p><p>另据报道，土耳其外长菲丹周六与埃及外长舒凯里在土耳其伊斯坦布尔会晤，讨论巴以冲突、伊朗和以色列的对抗、加沙地带的人道主义局势以及双边关系等问题。</p><p>菲丹会晤后表示，巴以冲突导致全球物流链受冲击，物价飞涨，为防止外溢效应引发全球性经济危机，必须果断采取措施，从根本上解决问题。他并表示，当务之急是实现两国方案。</p><p>舒凯里表示，巴以冲突有可能蔓延，伊以对抗局势已加剧，埃及方面呼吁各方保持克制，冲突、互不理解和暴力应马上停止。他称，伊以对抗转移了国际社会对加沙地带局势的关注。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%259A%2584%25E6%258F%25B4%25E5%258A%25A9-%25E6%258D%258D%25E5%258D%25AB%25E4%25BA%2586%25E8%25A5%25BF%25E6%2596%25B9%25E6%2596%2587%25E6%2598%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 13:40</div><img src="https://s.rfi.fr/media/display/e98fc2f0-ff06-11ee-9e4b-005056bfb2b6/w:1280/p:16x9/a4b36f8e-0be8-4841-92e5-1998c81bd74e.png"><p><strong>中国海军成立75周年之际，美菲将举行史上最大规模的「肩并肩」（Balikatan）联合军演。这项一年一度的演习从4月22日起至5月10日结束，届时将约有16,700名军人参加，美方将出动11,000人，菲方将派出5000多人。他们将参加海上安全、空中和导弹防御、动态导弹打击、网络防御和信息作战等方面的训练。                    </strong></p><div><p>据路透社报道，负责这次演习的菲律宾陆军上校迈克尔·洛基科（Michael Logico）说，这将是首次在菲律宾领海之外进行的海上演习。他表示，美菲军人将模拟收复菲律宾最北端被敌方军队占领的岛屿。该岛屿位于面向南中国海的巴拉望省西部，靠近台湾，其中最北端的雅米岛距离台湾仅约140公里。</p><p>美菲军队「肩并肩」联演举行始于1991年，至今已经34个年头。在今年的年度演习中，法国军队将首次派出一艘护卫舰参加，与菲律宾和美国海军军舰在马尼拉南中国海内专属经济区联合巡航。这次由菲律宾、美国和法国海军联合举行的演习被视为历届「肩并肩」规模最大的一次。</p><p>但法国与菲律宾两国并没有签署「驻军地位协议」（SOFA），因此法军只能在菲律宾领海之外参加演习。</p><p>路透社指出，此次演习旨在提高美国和菲律宾两军之间的互操作性。此次演习是在中国最近在南中国海和台湾海峡频频采取咄咄逼人的行为的背景下进行的，而南中国海和台湾海峡是中美紧张关系的导火索。</p><p><strong>针对美菲军演 中国反对“威慑第三方”</strong></p><p>针对美菲计划中的演习，中国外交部已警告菲律宾应该“清醒地认识到”，“拉拢域外国家在南海炫耀武力、挑起对抗，只会加剧紧张局势，破坏地区稳定”。</p><p>据中央社援引中国军事问题专家曹卫东周六向媒体表示，反对菲律宾引进外国的军事力量威慑第三方，并说这已非单单保护菲律宾。</p><p>曹卫东说，美菲两国的军事关系是两国的事情，但中方反对的是军事关系针对第三方。中国与菲律宾是南海周边国家，存在岛屿主权与海上画线争端的问题。</p><p>曹卫东指，美国在菲律宾有5个基地，现在又有4个，其中3个在吕宋岛，“靠近我们的台湾地区”。并且又部署「堤丰武器系统」（Typhon Weapons System ），可搭载「战斧」（Tomahawk）巡戈导弹，加上「标准六型」（SM-6）导弹，这令台湾在「战斧」巡戈导弹的覆盖之下。</p><p>据他强调，中方因而要考虑，“这对台湾岛构成威胁”，还对广东等沿海构成威胁，离大陆的东南沿海城市也很近。如果将这种军事基地部署在菲律宾，无论是对台湾还是中国大陆，“都是安全上的威胁”。</p><p>曹卫东又说，中方坚决反对这样的演习，因为威胁其他国家。除此之外，美菲演习扩大，向外海推进，并且是在美国与俄罗斯撕毁「中导条约」后，第一次在境外部署陆基中程弹道导弹，射程在500公里至5500公里，“部署在我们家门口”，对中国的意图是非常明显。</p><p>至于19日共军成立信息支持部队，曹卫东仅表示，这与编制体制有关，这种改变还是对未来讯息条件下的军事任务有关。</p><p><strong>美军新型陆基导弹首度登上第一岛链</strong></p><p>另据美国《海军新闻》15日消息称，美国陆军的新型陆基导弹发射系统最近在菲律宾北部部署，这套被称为「堤丰」（Typhon）武器系统的中程能力陆基导弹发射系统，正在参与为期两周的「坚盾-24」（Salaknib 24）美菲陆军联合演习。</p><p>该陆基导弹发射系统由美国洛克希德马丁公司设计、原采用海军MK-41垂直发射系统，修改后用于陆基作战。值得一提的是，此次是这套新型陆基导弹系统首次在“第一岛链”亮相，中其程导弹的射程可达两千公里以上，因此被认为可达中国东南沿海地带及敏感的南海及台湾海峡区域。专家视此为对中国发出警示，传达美国在印太地区的军事防御能力。</p><p>美国陆军新闻稿亦指出，部署「堤丰」武器系统“目的是提升菲律宾的海上防御能力，同时强化美菲同盟的协同工作能力与战备”。</p><p>值得关注还有，军事专家表示，美方在美菲联演部属的系统，可应付中国各型导弹。例如战斧可攻击中国南方陆地、在南海的基地。如果美军必须在西太平洋或在南海跟解放军交战，美军会快速派出派遣部队到第一岛链上各岛屿，并在快速部队掩护下，设各型导弹基地，一方面去拦截中国可能对第一岛链上美国的各盟邦或伙伴国，乃至美军基地，甚至是第二岛链关岛等的设施的攻击。</p><p>针对美国的举动，中南海也随即释出高调反制信号，发布与古巴军事高层在北京有军事对话的消息，较劲意味十分浓厚，再次折射出当下美、菲、中在此区域的激烈角力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
