--- a/articles/rfi/999970.md
+++ b/articles/rfi/999970.md
@@ -1,5 +1,5 @@
 <!--1713591902000-->
-[欧盟看到中国向俄罗斯供应军民两用产品的迹象](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1)
+[国际货币基金组织：欧盟应该加强单一市场，以缩小与美国的差距](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87-%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D)
 ------
 
-<div>19/04/2024 - 18:13</div><img src="https://s.rfi.fr/media/display/ea51fe98-baae-11ee-8e54-005056a97e36/w:1280/p:16x9/%D0%92%D1%96%D1%86%D0%B5%D0%BF%D1%80%D0%B5%D0%B7%D0%B8%D0%B4%D0%B5%D0%BD%D1%82%20%D0%84%D0%B2%D1%80%D0%BE%D0%BA%D0%BE%D0%BC%D1%96%D1%81%D1%96%D1%97%20%D0%92%D0%B0%D0%BB%D0%B4%D1%96%D1%81%20%D0%94%D0%BE%D0%BC%D0%B1%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D1%96%D1%81.%20%D0%91%D1%80%D1%8E%D1%81%D1%81%D0%B5%D0%BB%D1%8C%2C%2023%20%D1%81%D1%96%D1%87%D0%BD%D1%8F%2C%202024%20%C2%A9%20%20European%20Union.jpg"><p><strong>欧盟委员会副主席周四表示，欧盟看到有迹象表明中国正在向俄罗斯供应可用于制造武器的零部件，并担心如果西方的决心减弱，中国可能会有恃无恐地增加对俄罗斯的供应。        </strong></p><div><p>据路透4月18日华盛顿报道，欧盟委员会执行副主席东布罗夫斯基斯（Valdis Dombrovskis）表示，他与美国国会立法者会面时强调美国批准被拖延已久的援助乌克兰（法案）的重要性。</p><p>美国官员上周向记者们简要介绍了中国向俄罗斯提供的物资--包括无人机和导弹技术、卫星图像和机床，指出这些物资虽不足以达到提供致命武器援助的程度，但却有助于俄罗斯增强军力，支撑其长达两年的乌克兰战争。</p><p>欧盟委员会副主席东布罗夫斯基斯在美国国会外交关系委员会的一次活动上说，欧盟正与美国合作打击逃避对俄罗斯制裁的行为，但他没有透露细节。</p><p>他说，欧盟对中国在乌克兰问题上的行动表示担忧，尤其是最近有迹象表明中国正在向俄罗斯运送零部件。</p><p>他解释道，我们看到中国正在坐观成败，考虑如何利用这种情况为自己谋利。但不幸的是，最近我们也看到有迹象表明中国确实在向俄罗斯供应零部件和各种设备。”</p><p>他称，这些设备涉及军民两用物品，而非真正的武器，但这些行动表明，加强西方支持乌克兰的决心是多么重要。</p><p>中国大使馆发言人表示，中国不是乌克兰危机的一方，中俄之间的正常贸易不应受到干扰或限制。</p><p>美国国务卿安东尼-布林肯周五在G7外长会议上指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>在意大利卡普里岛举行的G7外长会议周五发布的公报称，他们对中国向俄罗斯转让材料帮助其在乌克兰的战争机器表示"强烈关切"。</p><p>美国国务院发言人本周表示，美国国务卿安东尼-布林肯预计在即将对中国进行的访问中提出类似的关切。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2t.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25AC%25A7%25E7%259B%259F%25E7%259C%258B%25E5%2588%25B0%25E4%25B8%25AD%25E5%259B%25BD%25E5%2590%2591%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E4%25BE%259B%25E5%25BA%2594%25E5%2586%259B%25E6%25B0%2591%25E4%25B8%25A4%25E7%2594%25A8%25E4%25BA%25A7%25E5%2593%2581%25E7%259A%2584%25E8%25BF%25B9%25E8%25B1%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2t.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 00:39</div><img src="https://s.rfi.fr/media/display/d6d2e1f0-fc05-11ee-945e-005056a90284/w:1280/p:16x9/2024-04-11T132347Z_1418145052_RC2C47AAXWUG_RTRMADP_3_ETHIOPIA-IMF.JPG"><p><strong>根据国际货币基金组织，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。        </strong></p><div><p>法新社从华盛顿报道，国际货币基金组织欧洲地区主任阿尔弗雷德·坎纳（Alfred Kanner）周五表示，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。</p><p>国际货币基金组织(IMF)欧洲地区主任阿尔弗雷德·坎纳在接受法新社采访时甚至表示说，如果欧盟能够将其单一市场内仍然存在的壁垒减少10个百分点的话，那么其GDP将会提高7%。</p><p>在举行了整整一周的国际货币基金组织和世界银行春季会议的最后一天，坎纳对法新社说，“与欧盟相比，美国的巨大优势在于它是一个大规模的单一市场”。</p><p>国际货币基金组织对2024年的经济预测显示，大西洋两岸之间存在差距，该组织预计，2024年，美国的经济增长率为2.7%，欧元区仅为0.8%；而2023年，美国是2.5%，欧元区是0.4%。</p><p>坎纳表示，对于欧洲来说，追赶上部分的落后，并不需要巨大的改变。他坚称，改善边境投资，推进银行业联盟、金融联盟，确保养老金可以从一个成员国转移到另一个成员国，促进劳工的流动，实现成员国之间文凭的认可，在这些问题上，是“不应该有任何争论的”。</p><p>坎纳还表示，欧洲国家必须进行结构性改革，为初始教育和整个职业生涯的教育和培训提供更多的空间。</p><p>他说，“为了加强技能，特别是随着人工智能的到来，我们需要工作方法的灵活性和适应性。”</p><p>不过，欧洲国家在生产率方面面临的主要挑战之一是人口老龄化，这一点在人口正在下降的欧洲大陆东部已经很明显。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5c.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A7%25E5%25B8%2581%25E5%259F%25BA%25E9%2587%2591%25E7%25BB%2584%25E7%25BB%2587-%25E6%25AC%25A7%25E7%259B%259F%25E5%25BA%2594%25E8%25AF%25A5%25E5%258A%25A0%25E5%25BC%25BA%25E5%258D%2595%25E4%25B8%2580%25E5%25B8%2582%25E5%259C%25BA%25EF%25BC%258C%25E4%25BB%25A5%25E7%25BC%25A9%25E5%25B0%258F%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E7%259A%2584%25E5%25B7%25AE%25E8%25B7%259D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5c.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
