--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713552302000-->
-[美国众院调查发现华尔街向黑名单内的中国公司输送了数十亿美元](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83)
+<!--1713552303000-->
+[以色列被指对伊朗发动攻击 伊朗中部听到剧烈爆炸声](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0)
 ------
 
-<div>19/04/2024 - 14:23</div><img src="https://s.rfi.fr/media/display/ac5979d4-da04-11ee-ba46-005056a90284/w:1280/p:16x9/AP24058715129409.jpg"><p><strong>美国国会一项调查发现，华尔街动用了数十亿美元的美国退休储蓄和其他投资来购买“指数基金”股票，其中50%以上是被华盛顿列入黑名单的中国公司。        </strong></p><div><p>据华尔街日报4月18日报道，由两党组成的美国众议院中共问题特别委员会被受权为美国制定对抗中国的战略，其一项调查重点是全球最大的资产管理公司贝莱德（BlackRock）和股票指数编制公司摩根士丹利资本国际公司（MSCI）。</p><p>该调查是对美国金融机构如何为投资中国公司提供便利的一次广泛审查，美国政府指责这些公司加强了中国的军事力量并侵犯了人权。</p><p>众议院中共问题特别委员会没有立法权，但在报告中敦促美国立法者在中美竞争加剧之际限制此类资本流动。该委员会在周四发布的报告中表示：“可能令许多美国人感到惊讶的是，这种活动并不违法。”</p><p>上述资本国际公司表示，它们没有违反任何法律，并坚称它们几乎没有自由裁量权将中国实体独立排除在指数基金之外。</p><p>华日的这个报道说，多年来，美国的金融家一直是中国在华盛顿的最亲密盟友。但随着中国长达数十年的繁荣逐渐结束，美国投资者正从这个世界第二大经济体撤退。来自华盛顿的政治压力不断加大，即使中国的经济状况有所改善，企业很可能难以扭转颓势。美国一些大型养老基金已经少了在中国的投资，或停止了在中国的新投资。</p><p>美国国会众议院中共问题特别委员会在报告中总结称，通过投资“指数”基金，美国金融机构去年向大约63家被美国盯上的中国公司输送了65亿美元，其中包括“航空航天”和“国防企业集团”“中国航空工业集团”、“基因组学公司华大基金（BGI）和互联网安全公司奇虎360。</p><p>这个委员会的报告称，摩根士丹利资本国际公司（MSCI）通过将这些中国公司纳入指数，为 37 亿美元的投资提供了便利。报告指出，贝莱德通过跟踪这些指数的基金投资了至少19亿美元。</p><p>国会委员会讨论的问题涉及贝莱德（BlackRock）等资产管理公司，这些公司利用摩根士丹利资本国际公司（MSCI）编制的指数为养老金、大学捐赠基金和其他长期投资者建立投资组合。虽然贝莱德等公司只是通过指数基金购买了被列入黑名单的中国公司的股票，MSCI 也没有向它们提供资金，但国会委员会的调查认为，这些公司帮助将美国人的储蓄引入相关的中国公司。</p><p>与这些公司的规模相比，金额相对较小。但这一发现涉及到一场政治辩论的核心，这场辩论在美国总统大选前夕可能会愈演愈烈：包括美国对中国的强硬立场，以及被视为促进了中国经济增长的美国公司。</p><p>华日的这个报道说，唐纳德-特朗普（Donald Trump）正在与拜登总统（President Biden）争夺重返白宫的机会，如果特朗普赢得总统竞选，他将提出大幅限制中国进入美国市场的想法。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzc.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E9%2599%25A2%25E8%25B0%2583%25E6%259F%25A5%25E5%258F%2591%25E7%258E%25B0%25E5%258D%258E%25E5%25B0%2594%25E8%25A1%2597%25E5%2590%2591%25E9%25BB%2591%25E5%2590%258D%25E5%258D%2595%25E5%2586%2585%25E7%259A%2584%25E4%25B8%25AD%25E5%259B%25BD%25E5%2585%25AC%25E5%258F%25B8%25E8%25BE%2593%25E9%2580%2581%25E4%25BA%2586%25E6%2595%25B0%25E5%258D%2581%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzc.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 10:18</div><img src="https://s.rfi.fr/media/display/97390bd4-fe0b-11ee-8376-005056bf30b7/w:1280/p:16x9/000_34PR6GE.jpg"><p><strong>伊朗中部周五凌晨听到剧烈爆炸声，以色列军方拒绝置评，美媒披露以色列向美国预告了这次袭击。        </strong></p><div><p>以色列周五夜间对伊朗发动了攻击。据德黑兰官方“法尔斯”通讯社报道，周五黎明时分，伊朗中部一个军事基地附近发生了三起爆炸事件。据伊朗国家电视台报道，中部伊斯法罕省听到了"巨大的爆炸声"，爆炸原因尚不清楚。</p><p>伊朗立即启动了多个省份的防空系统。伊朗当局表示，无人机已被击落，但"迄今为止 "没有发生导弹袭击。</p><p>不过，伊朗的“塔斯-尼姆”通讯社周五援引"消息灵通人士"说，在伊朗听到爆炸声后，"没有外国袭击的消息"。该通讯社称，"与以色列媒体的谣言和说法相反"，"没有任何关于外国对“伊斯法罕”中心城市或任何其他地区发动袭击的消息"。伊朗领导人尚未就爆炸事件公开发表评论。</p><p>据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。</p><p>白宫没有立即发表评论。但美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。"据 CNN 报道，一名美国官员说："我们没有同意报复行动。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>以色列军队发言人就爆炸事件告诉法新社记者："我们目前不予置评。</p><p>不过，以色列极右翼的国家安全部长本-格-维-尔（Ben Gvir）在 X 上发布一句话说"软弱！"</p><p>伊朗总统易卜拉欣-拉伊西（Ebrahim Raissi）本周曾表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险主义"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AB%25E6%258C%2587%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%258F%2591%25E5%258A%25A8%25E6%2594%25BB%25E5%2587%25BB-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%2590%25AC%25E5%2588%25B0%25E5%2589%25A7%25E7%2583%2588%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
