--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
 <!--1713541502000-->
-[伊朗中部发生爆炸 国际原子能机构称当地核设施&quot;未受损”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8-%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD-%E6%9C%AA%E5%8F%97%E6%8D%9F)
+[美媒：美国得到以色列袭击伊朗的预告但未同意也未参与](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%AA%92-%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E)
 ------
 
-<div>19/04/2024 - 11:23</div><img src="https://s.rfi.fr/media/display/a451c2ec-f849-11ee-b62a-005056a97e36/w:1280/p:16x9/2024-04-11T141133Z_1508015650_RC2D47A0VBVU_RTRMADP_3_UKRAINE-CRISIS-IAEA.JPG"><p><strong>总部设在奥地利维也纳的国际原子能机构（IAEA）宣布，周五在伊朗中部发生爆炸后，那里的核设施 "没有受到任何损害"。        </strong></p><div><p>国际原子能机构在社交网络X上"继续呼吁各方都保持高度克制，并重申任何核设施都不应成为军事冲突的目标"。</p><p>据报道，伊朗中部是几个已知核设施的所在地。据伊朗“塔斯尼姆”通讯社称，位于伊斯法罕地区的核设施"完全-安全"。</p><p>伊朗官方通讯社Irna也强调说："重要设施，尤其是核设施，完全安全，没有任何事故报告"。</p><p>周五凌晨伊朗中部发生了几起爆炸事件，美国高级官员暗示以色列发动了袭击，以报复上周末针对以色列的史无前例的无人机和导弹袭击。</p><p>然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>最初对伊朗中部发生爆炸的反应仍然非常谨慎，各国政治领导人纷纷呼吁"不要升级"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWx4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%258F%2591%25E7%2594%259F%25E7%2588%2586%25E7%2582%25B8-%25E5%259B%25BD%25E9%2599%2585%25E5%258E%259F%25E5%25AD%2590%25E8%2583%25BD%25E6%259C%25BA%25E6%259E%2584%25E7%25A7%25B0%25E5%25BD%2593%25E5%259C%25B0%25E6%25A0%25B8%25E8%25AE%25BE%25E6%2596%25BD-%25E6%259C%25AA%25E5%258F%2597%25E6%258D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWx4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 13:47</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>对于周五凌晨伊朗中部听到巨大的爆炸声，据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。华盛顿得到了以色列的预告，但没有同意。        </strong></p><div><p>美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。</p><p>白宫没有立即就伊朗中部的爆炸事件发表评论。据 CNN 报道，一名美国官员说：“我们没有批准这个报复行动”。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>今天以色列军队发言人就周五夜间伊朗中部的爆炸事件告诉法新社记者：“我们目前不予置评”。</p><p>不过，以色列极右翼的国家安全部长本 格维尔（Ben Gvir）在 X 上发布了一句话："软弱！"</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>美国驻以色列使馆限制其雇员和亲属的活动范围。</p><p>伊朗总统莱西在本周早些时候表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWyz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%25AA%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%25BE%2597%25E5%2588%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%25A2%2584%25E5%2591%258A%25E4%25BD%2586%25E6%259C%25AA%25E5%2590%258C%25E6%2584%258F%25E4%25B9%259F%25E6%259C%25AA%25E5%258F%2582%25E4%25B8%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWyz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
