--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
 <!--1713541502000-->
-[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
+[香港「七连跌」被挤出全球十大货柜港  机场贷运连续13年居首](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A6%99%E6%B8%AF-%E4%B8%83%E8%BF%9E%E8%B7%8C-%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF-%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96)
 ------
 
-<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 10:39</div><img src="https://s.rfi.fr/media/display/04d7f756-fe28-11ee-9cd8-005056a97e36/w:1280/p:16x9/hk-203.jpg"><p><strong>曾雄踞全球货柜港排名榜首的香港货柜码头，在吞吐量连续七年下跌之后，于去年以1440万个标准箱(TEU)正式跌出「十大」，被中东的杜拜取代。至于同属中国政府期望香港发展的「八大中心」之一的航运枢纽则传来令官员松一口气的消息，香港机场去年再度荣膺全球最繁忙货运机场，年内处理货运量达 430万公吨，是该机场连续第十叁年获选为全球最繁忙货运机场。        </strong></p><div><p>法国航运顾问公司Alphaliner指出，香港在2023年的货柜处理量有1440.1个标准箱，以7.2万个标准箱之差，让杜拜抢去全球最繁忙货柜港第十名的位置，屈居第11位，是首次跌出全球十大之列。</p><p>据Alphaliner发布的数据，全球最繁忙的叁十个货柜港口中，中国的上海以4915.8万个标准箱居首位，紧随其后的是新加坡(3901.3万个TEU)和宁波-舟山港(3530万个TEU)，接着是青岛丶深圳丶广州丶韩国釜山丶天津丶美国的洛杉矶-长滩港，以及杜拜的杰贝阿里港(Jebel Ali)。意味在「十大」中，中国港口占了六个；若以吞吐量计算，中国港口的吞吐量更占全球叁十个最繁忙货柜港的51%。</p><p>曾经连续十一年蝉联全球港口货柜吞吐量排行榜第一的香港，在中国港口兴旺的情况下，货柜吞吐量拾级而下，去年更按年大减13.7%而跌出全球十大，排第11位；与疫情前的2019年相比，跌幅达 21.3%，是连续第七年下跌，反映香港港口吞吐量正处于长期萎缩期，部分原因是货运被邻近的深圳和广州抢走，例如毗邻的深圳，去年的吞吐量便是香港的一倍有馀。</p><p>不过，运输及物流局昨(18日)晚于社交媒体发文，指根据国际航运业权威媒体Lloyd's List的方法，「估计」香港港口的货柜吞吐量去年仍然排名全球第十，较2022年下跌一名。局方指出，与Lloyd's不同，Alphaliner把洛杉矶港及长滩港合并计算，后者的排名，2022年时高香港一位。该局续称，大家着眼于香港货柜吞吐量有下跌趋势之馀，更应继续巩固及发展香港港口的优势。</p><p><strong>今年首季货运量续跌2.3% 处转型十字路口</strong></p><p>但以今年首季数字看来，香港货柜吞吐量的跌势未止。根据港府统计处和海运港口局秘书处的估计，香港今年头叁个月共处理了335.2万个标准箱，较去年同期收缩2.3%。加上主要航运联盟把香港剔除于2025年亚洲至美国西岸的远程航线，香港的吞吐量势将受影响。</p><p>本台日前报道已引述香港定期班轮协会主席罗振麟（Roberto Giannetta）指出，香港贷柜吞吐量虽在下滑，但在亚洲区内(Intra-Asia)市场这个全球最大航运市场的份额却在不断上升，香港可转作驳运中心。该会在报道刊登后发来数据作补充，指香港去年处理的1440万个标准箱中，亚洲区内的货运量占了六成，足证香港可为南中国提供最大亚洲区内市场网络。</p><p>相反，香港的空运业务仍然手执全球牛耳。根据国际机场协会15日公布的最新数据，按总货运量计算，香港国际机场再度获选为2023年全球最繁忙货运机场，年内机场处理的货运量达430万公吨，这是香港国际机场自2010年以来第十叁次获选为全球最繁忙货运机场。运物局局长林世雄指出，随着机场的第叁条跑道系统今年内投入运作，预计到2035年时，香港机场每年可处理1000万公吨货物，国际航空枢纽的地位将得以巩固。</p><p>中国在「十四五」规划中要求香港维持「八大中心」地位，分别是原来的国际金融中心丶国际航运中心丶国际商贸中心和亚太地区国际法律及解决争议服务中心，以及新增的国际航空枢纽中心丶国际创新科技中心丶区域知识产权贸易中心和中外文化艺术交流中心。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwg.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A6%2599%25E6%25B8%25AF-%25E4%25B8%2583%25E8%25BF%259E%25E8%25B7%258C-%25E8%25A2%25AB%25E6%258C%25A4%25E5%2587%25BA%25E5%2585%25A8%25E7%2590%2583%25E5%258D%2581%25E5%25A4%25A7%25E8%25B4%25A7%25E6%259F%259C%25E6%25B8%25AF-%25E6%259C%25BA%25E5%259C%25BA%25E8%25B4%25B7%25E8%25BF%2590%25E8%25BF%259E%25E7%25BB%25AD13%25E5%25B9%25B4%25E5%25B1%2585%25E9%25A6%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwg.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
