--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713537902000-->
-[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
+<!--1713541502000-->
+[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
 ------
 
-<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
